--- a/src/main/webapp/resources/css/myinfo_page_layer.css
+++ b/src/main/webapp/resources/css/myinfo_page_layer.css
@@ -72,6 +72,8 @@ li a {text-decoration: none; color: black;}
 
 .membership_button {width: 100px; height: 50px; font-size: 15px; font-weight: bolder; margin-left: 430px;}
 
+.membership_del_button { width: 100px; height: 50px; background: #eee;margin-left: 20px;text-decoration: none; text-align: center; line-height: 50px; border: 1px solid #000; color: #000;font-weight: 700; box-sizing: border-box; display: inline-block;}
+
 /* a:link {width: 100px; height: 50px; font-size: 15px; font-weight: bolder; margin-left: 30px;} */
 
 .find_area p a {text-decoration: none; color: black;}
